# pipeline

./: CMakeLists.txt  README.md  build.sh
apps/: blink_pipeline.cpp  exclude_ranges_totalpower.cpp  test_totalpower.cpp
experiments/: avg_images.sh  avg_n_images.sh  avg_per_timestamp.sh  avg_times.sh  compare_blink_images.sh  compare_blink_images_allcorr.sh  compare_blink_images_applysolutions.sh  compare_blink_images_gpu_vs_cpu.sh  compare_blink_images_gpu_vs_gpu.sh  compare_blink_images_simple.sh  compare_one_to_one.sh  comparefits.py  image_mwa_obsid1276619416_allch.sh  image_mwa_obsid1276619416_allch_gpu_setonix.sh  image_mwa_obsid1276619416_ch133.sh  image_mwa_obsid1276619416_ch133_allch.sh  test_mwa_obsid1276619416_full_imaging_loop_chall.sh  test_mwa_obsid1276619416_full_imaging_loop_chall_autometafits.sh  test_mwa_obsid1276619416_full_imaging_loop_chall_autometafits_all.sh  test_mwa_obsid1276619416_full_imaging_loop_chall_second2.sh  test_mwa_obsid1276619416_full_imaging_loop_chall_second2_auto.sh
experiments/setonix/: test_mwa_obsid1276619416_full_imaging_loop_chall_second2_auto.sh  test_mwa_obsid1276619416_full_imaging_loop_chall_second2_auto.sh.old
scripts/: doit!  offline_dynaspec_totalpower.sh  test_mwa_full_imaging_loop_chall_second2_auto.sh
src/: dedispersion.cpp  dedispersion.hpp  dynamic_spectrum.cpp  dynamic_spectrum.hpp  files.cpp  peak_finding.cpp  peak_finding.hpp  pipeline.cpp  pipeline.hpp  rfi_flagging.cpp  rfi_flagging.hpp  timestep_rfi_flagging.cpp  timestep_rfi_flagging.hpp  totalpower.cpp  totalpower.h
src/gpu/: dedispersion_gpu.cpp  dedispersion_gpu.hpp  rfi_flagging_gpu.cpp  rfi_flagging_gpu.hpp  timestep_rfi_flagging_gpu.cpp  timestep_rfi_flagging_gpu.hpp
tests/: TODO.txt  common.hpp  test_eda2_data_20220118_ch204.sh  test_mwa_obsid1276619416_all_channels.sh  test_mwa_obsid1276619416_cablecorr_only.sh  test_mwa_obsid1276619416_cablegeocorr_applycal.sh  test_mwa_obsid1276619416_cablegeocorr_applycal_xcorr.sh  test_mwa_obsid1276619416_cablegeocorr_only.sh  test_mwa_obsid1276619416_full_imaging.sh  test_mwa_obsid1276619416_full_imaging_cal_in_pipeline.sh  test_mwa_obsid1276619416_full_imaging_loop.sh  test_mwa_obsid1276619416_full_imaging_loop_ch156.sh  test_mwa_obsid1276619416_full_imaging_loop_chall.sh  test_mwa_obsid1276619416_geocorr_only.sh  test_mwa_obsid1276619416_nocorr_only.sh
tests/gpu/: test_mwa_obsid1276619416_cablecorr_only.sh  test_mwa_obsid1276619416_cablegeocorr_applycal.sh  test_mwa_obsid1276619416_cablegeocorr_applycal_xcorr.sh  test_mwa_obsid1276619416_cablegeocorr_only.sh  test_mwa_obsid1276619416_nocorr_only.sh
